--- a/index.css
+++ b/index.css
@@ -111,7 +111,7 @@ header {
 }
 
 .brand-stationery {
-    color: #666;
+    color:#ff4444;
     font-size: 1.2rem;
     font-weight: 400;
     letter-spacing: 2px;
@@ -120,7 +120,7 @@ header {
 }
 
 .logo a:hover {
-    transform: scale(1.02) rotate(-2deg);
+    transform: scale(1.02) rotate(-1deg);
 }
 
 .logo a:hover .logo-img {
